Practica y notebooks actualizados

--- a/Notebooks/clase13-ldd-desafioSorpresa.ipynb
+++ b/Notebooks/clase13-ldd-desafioSorpresa.ipynb
@@ -1,9 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e12bf1ae-b0ee-4f3a-8560-cb590ecb1d7c",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "66b10073",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import seaborn as sns\n",
     "from sklearn.model_selection import KFold\n",
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "1d0984c6-ce35-40b1-8015-53851cbcc65e",
    "metadata": {},
    "outputs": [],
@@ -43,7 +45,7 @@
    "id": "92206045-5eb2-4ae0-bfc1-bb212ecf390e",
    "metadata": {},
    "source": [
-    "En 10 minutos, realizar los siguientes ejercicios buscando en internet, la documentación, CHATGPT, etc... cómo hacerlo."
+    "En 10 minutos, realizar los siguientes ejercicios buscando cómo hacerlo en internet, la documentación, CHATGPT, etc..."
    ]
   },
   {
@@ -51,12 +53,12 @@
    "id": "d019121a-8806-406a-832c-8d90e4bde8e2",
    "metadata": {},
    "source": [
-    "**Ejercicio 1.** En el dataset de vinos de la última clase, renombrar la columna \"od280/od315_of_diluted_wines\" a \"od280_od315_of_diluted_wines\""
+    "**Ejercicio 1.** En el dataset de *vinos* de la última clase, renombrar la columna \"od280/od315_of_diluted_wines\" a \"od280_od315_of_diluted_wines\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "262abd46-2379-43c4-9a84-fed64660e931",
    "metadata": {},
    "outputs": [
@@ -204,7 +206,7 @@
        "4                          2.93    735.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,6 +219,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a78f419",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "8efd7db5-b9c0-47ed-b12c-58e4abdb8bd4",
    "metadata": {},
@@ -226,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "505e4686-43e4-45ba-a492-3a5540214585",
    "metadata": {},
    "outputs": [
@@ -331,7 +341,7 @@
        "4       3450.0  Female  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,6 +350,14 @@
     "penguins = sns.load_dataset(\"penguins\")\n",
     "penguins.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2f84bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -351,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "ac2db99f-40e1-4a67-a7f6-424aa43d3ace",
    "metadata": {},
    "outputs": [
@@ -571,20 +589,20 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "macro = pd.read_csv(\"../data/OfertaYDemanda.csv\")\n",
+    "macro = pd.read_csv(\"../Datos/OfertaYDemanda.csv\")\n",
     "macro.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c89ae69-587a-46c0-a487-c91114aeeea2",
+   "id": "46544a73",
    "metadata": {},
    "outputs": [],
    "source": []
