--- a/Practicas/practica6-ldd-1c2024.tex
+++ b/Practicas/practica6-ldd-1c2024.tex
@@ -261,7 +261,7 @@ En los siguientes ejercicios, utilizamos el dataset \lstinline{macro_full_column
 \begin{enumerate}
 \item Generar un DataFrame que contenga solo las variables que terminan con \lstinline{.oferta}. ¿Había datos faltantes en estas columnas?
 \item Queremos explicar la variable \lstinline{PBI_a_precios_de_mercado.oferta} utilizando el resto de las variables de oferta. Crear un DataFrame \lstinline{X} que contenga todas las variables de oferta excepto la de PBI y una Series \lstinline{y} que contenga solo la variable de PBI.
-\item Ajustar un modelo de regresión lineal ordinaria o Ridge y definir el vector de predicciones.
+\item Ajustar un modelo de regresión lineal ordinaria o Ridge y generar el vector de predicciones (hacerlo sobre el conjunto de todos los datos, no es necesario separar en entrenamiento y testeo).
 \item Graficar, en un mismo gráfico, la variable respuesta original y la predicha en función del año. Sugerencia: prestar atención a los índices de cada variable.
 \end{enumerate}
 
